Backport from trunk:

Remove newlines from the subject.

BUG: 104788

svn path=/branches/KDE/3.4/kdepim/; revision=414160